# Fake_Ops_Center

./: FakeOpsCenter.spec  LICENSE  README.md  config.yaml  pyproject.toml
src/fake_ops_center/: __init__.py  app.py
src/fake_ops_center.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fake_ops_center/core/: __init__.py  bus.py  config.py  feeds.py  models.py  theme.py
src/fake_ops_center/ui/: __init__.py  alerts.py  main_window.py  panel_incidents.py  panel_logs.py  panel_map.py  panel_metrics.py  panel_overview.py  panel_risk.py  panel_timeline.py
tests/: conftest.py  test_config.py  test_feeds.py  test_ui_helpers.py
themes/: dark.yaml  light.yaml
